tests/invalid/simple/IntDiv_CompileFail_1.whiley
void fg(int x, int y):
    x = x / 0
